Updates before release 0.7.3 (s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-5)
s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-5
Keywords:

darcs-hash:0f9e8fb7446788068366b22f78aea1cf48795266

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+18/10/2004:
+
+Release of version 0.7.3
+
+New features/important changes include:
+
+- Autodetection and support for glib >= 2.4 (but glib >= 1.2.8 is
+  still supported): glib >= 2.0 and < 2.4 is not supported (send me
+  patches!).
+- pkgconfig preliminary support
+- Mingwin support.
+- Changes to the interface of gts_graph_read().
+
+Bug Fixes:
+
+- Constrained Delaunay Triangulation guess selection
+- Boolean operations: Now uses SOS for segment/triangle intersections.
+
 15/05/2004:
 
 Release of version 0.7.2
