Added fast triangle-box intersection test (s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-9)
s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-9
Keywords:

Written by Tomas Akenine-Moller.

darcs-hash:d381f50b5ef7a4eb4f2320bc9fd3451b886d77b2

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Wagner Toledo Correa: triangle strips.
 Marcelo E. Magallon: Debian packages.
 Wayne C Gramlich, Michael Loehr: 4x4 GtsMatrix implementation.
 Tim F.: "dual" marching tetrahedra.
+Tomas Akenine-Moller: fast triangle-box intersection test.
