Updated NEWS for release 0.7.6
darcs-hash:3987dd515f92a0f7ef41048a778db8dcd7f1de19

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+29/03/2006:
+
+Release of version 0.7.6
+
+Important changes:
+
+- Debian snapshot package creation.
+- LC_ALL is set to POSIX in all executables to avoid problems with
+locale-dependent floating-point conventions.
+
 17/10/2005:
 
 Release of version 0.7.4
