Added specs for RPM packaging (thanks to Ivan Vari)
darcs-hash:ab7183b5033b6aa36fd5d0577cddaf4a7c37c658

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@ Jerome Benoit: surface tesselation.
 Wagner Toledo Correa: triangle strips.
 Marcelo E. Magallon: Debian packages.
 Wayne C Gramlich, Michael Loehr: 4x4 GtsMatrix implementation.
-Tim F.: "dual" marching tetrahedra.
+Tim Fenn: "dual" marching tetrahedra.
 Tomas Akenine-Moller: fast triangle-box intersection test.
+Ivan Adam Vari: RPM packages.
