Added man pages from debian (thanks Ruben!)
Ignore-this: 6219302d9f3660f284b855e0f3ef68cb

darcs-hash:a573b374247b426562ce0c77dec166f9a28bbc73

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Stéphane Popinet   <popinet@users.sourceforge.net>
 
 Contributors
 ------------
+Marcelo E. Magallon, Ruben Molina: Debian packages.
 Jonathan R. Shewchuk: robust geometric predicates.
 Ray Jones: discrete differential operators.
 Gert Wollny: marching tetrahedra.
