Applied manpages patch from Benoit Knecht
Ignore-this: ad1395e04314b53d39c390bcf2f84226

darcs-hash:efb0a07358f4cb5772c8c11da630210dde0ebdea

--- a/doc/manpages/gts2dxf.1
+++ b/doc/manpages/gts2dxf.1
@@ -1,11 +1,11 @@
-.TH gts2dxf 1 "June 2, 2008" "" "gts2dxf: converts a GTS file to DXF format"
+.TH gts2dxf 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gts2dxf \- converts a GTS file to DXF format. 
 
 .SH SYNOPSIS
 .B gts2dxf
-.RI < input.gts > output.dxf
+.RI <\  input.gts\  >\  output.dxf
 
 .SH DESCRIPTION
 This manual page documents briefly the 
