--- a/doc/manpages/gts2stl.1
+++ b/doc/manpages/gts2stl.1
@@ -1,11 +1,11 @@
-.TH gts2stl 1 "June 2, 2008" "" "gts2stl: converts a GTS file to STL format"
+.TH gts2stl 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gts2stl \- converts a GTS file to STL format
 
 .SH SYNOPSIS
 .B gts2stl
-.RI [OPTION]... < input.gts > output.stl
+.RI [\| OPTIONS \|]\ <\  input.gts\  >\  output.stl
 
 .SH DESCRIPTION
 This manual page documents briefly the 
@@ -17,13 +17,13 @@ This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-r, \-\-revert
+.BR \-r ,\  \-\-revert
 Revert face normals.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Display surface statistics.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
