--- a/doc/manpages/delaunay.1
+++ b/doc/manpages/delaunay.1
@@ -1,11 +1,11 @@
-.TH delaunay 1 "June 2, 2008" "" "delaunay: constructs the constrained Delaunay triangulation of the input"
+.TH delaunay 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 delaunay \- constructs the constrained Delaunay triangulation of the input
 
 .SH SYNOPSIS
 .B delaunay
-.RI [OPTION] < file.gts
+.RI [\| OPTIONS \|]\ <\  file.gts
 
 .SH DESCRIPTION
 This manual page documents briefly the
@@ -18,44 +18,46 @@ This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-b, \-\-hull
+.BR \-b ,\  \-\-hull
 Do not keep convex hull.
 .TP
-.B \-e, \-\-noconst
+.BR \-e ,\  \-\-noconst
 Do not add constrained edges.
 .TP
-.B \-S, \-\-split
+.BR \-S ,\  \-\-split
 Split constraints (experimental).
 .TP
-.B \-H, \-\-holes
+.BR \-H ,\  \-\-holes
 Remove holes from the triangulation.
-.B \-d, \-\-duplicates
+.TP
+.BR \-d ,\  \-\-duplicates
 Remove duplicate vertices.
 .TP
-.B \-r, \-\-randomize
+.BR \-r ,\  \-\-randomize
 Shuffle input vertex list.
 .TP
-.B \-c, \-\-check
+.BR \-c ,\  \-\-check
 Check Delaunay property.
 .TP
-.B \-f FNAME, \-\-files=FNAME
+.BI \-f\  FNAME\fR,\  \-\-files= FNAME
 Generate evolution files.
 .TP
-.B \-o, \-\-conform
+.BR \-o ,\  \-\-conform
 Generate conforming triangulation.
 .TP
-.B \-s N, \-\-steiner=N
+.BI \-s\  N\fR,\  \-\-steiner= N
 Maximum number of Steiner points for conforming triangulation (default is no limit).
 .TP
-.B \-q Q, \-\-quality=Q
+.BI \-q\  Q\fR,\  \-\-quality= Q
 Set the minimum acceptable face quality.
-.B \-a A, \-\-area=A
+.TP
+.BI \-a\  A\fR,\  \-\-area= A
 Set the maximum acceptable face area.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Print statistics about the triangulation.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
