--- a/doc/manpages/gts-config.1
+++ b/doc/manpages/gts-config.1
@@ -1,11 +1,11 @@
-.TH gts-config 1 "June 2, 2008" "" "gts-config: defines values for programs using gts"
+.TH gts-config 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gts-config \- defines values for programs using gts.
 
 .SH SYNOPSIS
 .B gts-config
-.RI [OPTIONS] [LIBRARIES]
+.RI [\| OPTIONS \|]\ [\| LIBRARIES \|]
 .SH DESCRIPTION
 This manual page documents briefly the
 .B gts-config
@@ -16,9 +16,9 @@ These programs follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-\-prefix[=DIR]
+.BI \-\-prefix\fR[\|= DIR \fR\|]
 .TP
-.B \-\-exec-prefix[=DIR]
+.BI \-\-exec-prefix\fR[\|= DIR \fR\|]
 .TP
 .B \-\-version
 .TP
