--- a/doc/manpages/gts2oogl.1
+++ b/doc/manpages/gts2oogl.1
@@ -1,11 +1,11 @@
-.TH gts2oogl 1 "June 2, 2008" "" "gts2oogl: converts a GTS file to OOGL file format (Geomview)"
+.TH gts2oogl 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gts2oogl \- converts a GTS file to OOGL file format (Geomview).
 
 .SH SYNOPSIS
 .B gts2oogl
-.RI [OPTION]... < input.srf > output.oogl
+.RI [\| OPTIONS \|]\ <\  input.srf\  >\  output.oogl
 
 .SH DESCRIPTION
 This manual page documents briefly the
@@ -17,7 +17,7 @@ This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-G, \-\-gnuplot
+.BR \-G ,\  \-\-gnuplot
 Writes isolines in gnuplot format.
 .TP
 .B \-\-component
@@ -32,29 +32,33 @@ Color faces according to their area.
 .B \-\-incomp
 Color incompatible faces.
 .TP
-.B \-f VAL, \-\-fold=VAL
-Color faces which make an angle smaller than VAL degrees with any of their neighbors.
+.BI \-f\  VAL\fR,\  \-\-fold= VAL
+Color faces which make an angle smaller than
+.I VAL
+degrees with any of their neighbors.
 .TP
-.B \-t, \-\-faces
+.BR \-t ,\  \-\-faces
 Output individual faces.
 .TP
 .B \-\-epv
 Color vertices according to number of edges per vertex.
 .TP
-.B \-H C, \-\-height=C
-Color vertices according to their C coordinate.
+.BI \-H\  C\fR,\  \-\-height= C
+Color vertices according to their
+.I C
+coordinate.
 .TP
-.B \-g, \-\-gaussian
+.BR \-g ,\  \-\-gaussian
 Color vertices according to Gaussian curvature.
 .TP
-.B \-C, \-\-curvature
+.BR \-C ,\  \-\-curvature
 Color vertices according to mean curvature.
 .TP
 .B \-\-boundary
 Output boundary edges.
 .TP
-.B \-e A, \-\-feature=A
-Output `feature' edges defined by angle A
+.BI \-e\  A\fR,\  \-\-feature= A
+Output `feature' edges defined by angle \fIA\fR.
 .TP
 .B \-\-non-manifold
 Output non-manifold edges.
@@ -62,34 +66,44 @@ Output non-manifold edges.
 .B \-\-duplicate
 Output duplicate edges.
 .TP
-.B \-i N, \-\-isolines=N
-Draw N isolines (levels of constant altitude).
+.BI \-i\  N\fR,\  \-\-isolines= N
+Draw
+.I N
+isolines (levels of constant altitude).
 .TP
-.B \-I L, \-\-isolines=L
-Draw isoline at level L.
+.BI \-I\  L\fR,\  \-\-isolines= L
+Draw isoline at level \fIL\fR.
 .TP
-.B \-\-cmap=FILE
-Load FILE as colormap.
+.BI \-\-cmap= FILE
+Load
+.I FILE
+as colormap.
 .TP
-.B \-m VAL, \-\-min=VAL
-Use VAL as minimum scaling value.
+.BI \-m\  VAL\fR,\  \-\-min= VAL
+Use
+.I VAL
+as minimum scaling value.
 .TP
-.B \-M VAL, \-\-max=VAL
-Use VAL as maximum scaling value.
+.BI \-M\  VAL\fR,\  \-\-max= VAL
+Use
+.I VAL
+as maximum scaling value.
 .TP
-.B \-r, \-\-reverse
+.BR \-r ,\  \-\-reverse
 Reverse colormap.
 .TP
-.B \-n, \-\-nosurface
+.BR \-n ,\  \-\-nosurface
 Do not output surface.
 .TP
-.B \-F C, \-\-flatten=C
-Set C coordinate to average value.
+.BI \-F\  C\fR,\  \-\-flatten= C
+Set
+.I C
+coordinate to average value.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Display surface statistics.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
