--- a/doc/manpages/gtscheck.1
+++ b/doc/manpages/gtscheck.1
@@ -1,11 +1,11 @@
-.TH gtscheck 1 "June 2, 2008" "" "gtscheck: checks that a surface defines a closed, orientable non self-intersecting manifold"
+.TH gtscheck 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gtscheck \- checks that a surface defines a closed, orientable non self-intersecting manifold.
 
 .SH SYNOPSIS
 .B gtscheck
-.RI [OPTION] < FILE
+.RI [\| OPTION \|]\ <\  FILE
 .SH DESCRIPTION
 This manual page documents briefly the
 .B gtscheck
@@ -16,12 +16,13 @@ These programs follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Print statistics about the surface.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
-.br
+
+.SH EXIT STATUS
 The return status reflects the error encountered:
 .B 0
 none
