--- a/doc/manpages/gtscompare.1
+++ b/doc/manpages/gtscompare.1
@@ -1,46 +1,54 @@
-.TH gtscompare 1 "June 2, 2008" "" "gtscompare: compare two GTS files"
+.TH gtscompare 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gtscompare \- compare two GTS files.
 
 .SH SYNOPSIS
 .B gtscompare
-.RI [OPTION]... FILE1 FILE2 DELTA
-.BR
-DELTA is the sampling length expressed as a fraction of the bounding box diagonal of the second surface.
+.RI [\| OPTIONS \|]
+.I FILE1 FILE2 DELTA
 
 .SH DESCRIPTION
 This manual page documents briefly the 
 .B gtscompare
 command.
 
+.I DELTA
+is the sampling length expressed as a fraction of the bounding box diagonal of the second surface.
+
 .SH OPTIONS
 This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-s, \-\-symmetric
+.BR \-s ,\  \-\-symmetric
 Symmetric statistics.
 .TP
-.B \-i, \-\-image
+.BR \-i ,\  \-\-image
 Output visualisation mesh.
 .TP
-.B \-c FILE, \-\-cmap=FILE
-Load FILE as colormap.
+.BI \-c\  FILE\fR,\  \-\-cmap= FILE
+Load
+.I FILE
+as colormap.
 .TP
-.B \-m VAL, \-\-min=VAL
-Use VAL as minimum scaling value.
+.BI \-m\  VAL\fR,\  \-\-min= VAL
+Use
+.I VAL
+as minimum scaling value.
 .TP
-.B \-M VAL, \-\-max=VAL
-Use VAL as maximum scaling value.
+.BI \-M\  VAL\fR,\  \-\-max= VAL
+Use
+.I VAL
+as maximum scaling value.
 .TP
-.B \-r, \-\-reverse
+.BR \-r ,\  \-\-reverse
 Reverse colormap.
 .TP
-.B \-l, \-\-log
+.BR \-l ,\  \-\-log
 Use log scale.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
