--- a/doc/manpages/gtstemplate.1
+++ b/doc/manpages/gtstemplate.1
@@ -1,11 +1,11 @@
-.TH gtstemplate 1 "June 2, 2008" "" "gtstemplate: generates of a template used to create new object classes"
+.TH gtstemplate 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 gtstemplate \- generates of a template used to create new object classes.
 
 .SH SYNOPSIS
 .B gtstemplate
-.RI [OPTIONS] [LIBRARIES]
+.RI [\| OPTIONS \|]\ [\| LIBRARIES \|]
 
 .SH DESCRIPTION
 This manual page documents briefly the
@@ -21,7 +21,7 @@ A summary of options is included below.
 .TP
 .B \-\-no-extra-method
 .TP
-.B \-\-overload=METHOD
+.BI \-\-overload= METHOD
 
 .SH AUTHOR
 gtstemplate was written by Stephane Popinet <popinet@users.sourceforge.net>.
