--- a/doc/manpages/happrox.1
+++ b/doc/manpages/happrox.1
@@ -1,11 +1,11 @@
-.TH happrox 1 "June 2, 2008" "" "happrox: returns a simplified triangulation of a set of points"
+.TH happrox 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 happrox \- returns a simplified triangulation of a set of points using algorithm III of Garland and Heckbert (1995).
 
 .SH SYNOPSIS
 .B happrox
-.RI [OPTION]... < [input.pgm|input] > output.gts
+.RI [\| OPTIONS \|]\ <\ [\| input.pgm | input \|]\ >\  output.gts
 
 .SH DESCRIPTION
 This manual page documents briefly the 
@@ -17,31 +17,31 @@ This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-n N, \-\-number=N
-Stop the refinement process if the number of vertices is larger than N.
+.BI \-n\  N\fR,\  \-\-number= N
+Stop the refinement process if the number of vertices is larger than \fIN\fR.
 .TP
-.B \-c C, \-\-cost=C
-Stop the refinement process if the cost of insertion of a vertex is smaller than C.
+.BI \-c\  C\fR,\  \-\-cost= C
+Stop the refinement process if the cost of insertion of a vertex is smaller than \fIC\fR.
 .TP
-.B \-f, \-\-flat
+.BR \-f ,\  \-\-flat
 Input is a flat file with three x,y,z columns (default is PGM file).
 .TP
-.B \-r Z, \-\-relative=Z
-Use relative height cost for all heights larger than Z.
+.BI \-r\  Z\fR,\  \-\-relative= Z
+Use relative height cost for all heights larger than \fIZ\fR.
 .TP
-.B \-k, \-\-keep
+.BR \-k ,\  \-\-keep
 Keep enclosing triangle.
 .TP
-.B \-C, \-\-closed
+.BR \-C ,\  \-\-closed
 Close the surface.
 .TP
-.B \-l, \-\-log
+.BR \-l ,\  \-\-log
 Log evolution of cost.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Display surface statistics.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
