--- a/doc/manpages/stl2gts.1
+++ b/doc/manpages/stl2gts.1
@@ -1,11 +1,11 @@
-.TH stl2gts 1 "June 2, 2008" "" "stl2gts: convert an STL file to GTS format"
+.TH stl2gts 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 stl2gts \- convert an STL file to GTS format.
 
 .SH SYNOPSIS
 .B stl2gts
-.RI [OPTION]... < input.stl > output.gts
+.RI [\| OPTIONS \|]\ <\  input.stl\  >\  output.gts
 
 .SH DESCRIPTION
 This manual page documents briefly the
@@ -17,16 +17,16 @@ These programs follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-r, \-\-revert
+.BR \-r ,\  \-\-revert
 Revert face normals.
 .TP
-.B \-n, \-\-nomerge
+.BR \-n ,\  \-\-nomerge
 Do not merge vertices.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Display surface statistics.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
