--- a/doc/manpages/transform.1
+++ b/doc/manpages/transform.1
@@ -1,11 +1,11 @@
-.TH transform 1 "June 2, 2008" "" "transform: apply geometric transformations to the input"
+.TH transform 1 "June 2, 2008" "" "GNU Triangulated Surface utils"
 
 .SH NAME
 transform \- apply geometric transformations to the input.
 
 .SH SYNOPSIS
 .B transform
-.RI [OPTION] < file.gts
+.RI [\| OPTIONS \|]\ <\  file.gts
 
 .SH DESCRIPTION
 This manual page documents briefly the 
@@ -17,46 +17,58 @@ This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-r ANGLE, \-\-rx=ANGLE
-Rotate around x-axis (angle in degrees).
+.BI \-r\  ANGLE\fR,\  \-\-rx= ANGLE
+Rotate around x-axis
+.RI ( ANGLE
+in degrees).
 .TP
-.B \-m ANGLE, \-\-ry=ANGLE
+.BI \-m\  ANGLE\fR,\  \-\-ry= ANGLE
 Rotate around y-axis.
 .TP
-.B \-m ANGLE, \-\-rz=ANGLE
+.BI \-m\  ANGLE\fR,\  \-\-rz= ANGLE
 Rotate around z-axis.
 .TP
-.B \-s FACTOR, \-\-scale=FACTOR
-Scale by FACTOR.
+.BI \-s\  FACTOR\fR,\  \-\-scale= FACTOR
+Scale by
+.IR FACTOR .
 .TP
-.B \-R FACTOR, \-\-sx=FACTOR
-Scale x-axis by FACTOR.
+.BI \-R\  FACTOR\fR,\  \-\-sx= FACTOR
+Scale x-axis by
+.IR FACTOR .
 .TP
-.B \-M FACTOR, \-\-sy=FACTOR
-Scale y-axis by FACTOR.
+.BI \-M\  FACTOR\fR,\  \-\-sy= FACTOR
+Scale y-axis by
+.IR FACTOR .
 .TP
-.B \-N FACTOR, \-\-sz=FACTOR
-Scale z-axis by FACTOR.
+.BI \-N\  FACTOR\fR,\  \-\-sz= FACTOR
+Scale z-axis by
+.IR FACTOR .
 .TP
-.B \-t V, \-\-tx=V
-Translate of V along x-axis.
+.BI \-t\  V\fR,\  \-\-tx= V
+Translate of
+.I V
+along x-axis.
 .TP
-.B \-u V, \-\-ty=V
-Translate of V along y-axis.
+.BI \-u\  V\fR,\  \-\-ty= V
+Translate of
+.I V
+along y-axis.
 .TP
-.B \-w V, \-\-tz=V
-Translate of V along z-axis.
+.BI \-w\  V\fR,\  \-\-tz= V
+Translate of
+.I V
+along z-axis.
 .TP
-.B \-i, \-\-revert
+.BR \-i ,\  \-\-revert
 Turn surface inside out.
 .TP
-.B \-o, \-\-normalize
+.BR \-o ,\  \-\-normalize
 Fit the resulting surface in a cube of size 1 centered at the origin.
 .TP
-.B \-v, \-\-verbose
+.BR \-v ,\  \-\-verbose
 Print statistics about the surface.
 .TP
-.B \-h, \-\-help
+.BR \-h ,\  \-\-help
 Display the help and exit.
 
 .SH AUTHOR
